--- a/Thor.Tasks.csproj
+++ b/Thor.Tasks.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.0.1-alpha-$(VersionSuffix)</Version>
+    <Version>1.0.0-beta-$(VersionSuffix)</Version>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Aq.ExpressionJsonSerializer" Version="0.18" />
