--- a/Gofer.NET.Tests/Gofer.NET.Tests.csproj
+++ b/Gofer.NET.Tests/Gofer.NET.Tests.csproj
@@ -10,6 +10,6 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Thor.Tasks.csproj" />
+    <ProjectReference Include="..\Gofer.NET.csproj" />
   </ItemGroup>
 </Project>
