--- a/Gofer.NET.csproj
+++ b/Gofer.NET.csproj
@@ -8,12 +8,12 @@
     <PackageReference Include="StackExchange.Redis" Version="1.2.6" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Remove="Thor.Tasks.Tests\**" />
+    <Compile Remove="Gofer.NET.Tests\**" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Remove="Thor.Tasks.Tests\**" />
+    <EmbeddedResource Remove="Gofer.NET.Tests\**" />
   </ItemGroup>
   <ItemGroup>
-    <None Remove="Thor.Tasks.Tests\**" />
+    <None Remove="Gofer.NET.Tests\**" />
   </ItemGroup>
 </Project>
