--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
  - (cd Gofer.NET.Tests && dotnet restore && dotnet test)
 after_success:
  - bash publish.sh Gofer.NET
- - cd Gofer.NET.Tests && bash publish.sh Gofer.NET
+ - cd Gofer.NET.Utils && bash publish.sh Gofer.NET.Utils
 cache:
   directories:
   - $HOME/.nuget
