--- a/Gofer.NET.csproj
+++ b/Gofer.NET.csproj
@@ -8,12 +8,16 @@
     <PackageReference Include="StackExchange.Redis" Version="1.2.6" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Remove="Gofer.NET.Tests\**" />
+    <ProjectReference Include="Gofer.NET.Utils\Gofer.NET.Utils.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Remove="Gofer.NET.Utils\**" />
     <EmbeddedResource Remove="Gofer.NET.Tests\**" />
-  </ItemGroup>
-  <ItemGroup>
+    <None Remove="Gofer.NET.Utils\**" />
     <None Remove="Gofer.NET.Tests\**" />
+    
+    <Compile Remove="Gofer.NET.Utils\**" />
+
+    <Compile Remove="Gofer.NET.Tests\**" />
   </ItemGroup>
 </Project>
