--- a/Gofer.NET.csproj
+++ b/Gofer.NET.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
-    <PackageReference Include="StackExchange.Redis" Version="1.2.6" />
+    <PackageReference Include="StackExchange.Redis.StrongName" Version="1.2.6" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="Gofer.NET.Utils\Gofer.NET.Utils.csproj" />
