backing out the task backup so it can be reworked in a later commit

--- a/Gofer.NET.Tests/Gofer.NET.Tests.csproj
+++ b/Gofer.NET.Tests/Gofer.NET.Tests.csproj
@@ -11,5 +11,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Gofer.NET.csproj" />
+    <ProjectReference Include="..\Gofer.NET.Utils\Gofer.NET.Utils.csproj" />
   </ItemGroup>
 </Project>
