--- a/Gofer.NET.Utils/Gofer.NET.Utils.csproj
+++ b/Gofer.NET.Utils/Gofer.NET.Utils.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Version>1.0.0-beta-$(VersionSuffix)</Version>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'ConsoleTestServer|AnyCPU'" />
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
