--- a/Gofer.NET.Tests/Gofer.NET.Tests.csproj
+++ b/Gofer.NET.Tests/Gofer.NET.Tests.csproj
@@ -6,9 +6,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'ConsoleTestServer|AnyCPU'" />
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="4.19.4" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0-preview-20170628-02" />
-    <PackageReference Include="xunit" Version="2.2.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="xunit" Version="2.4.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Gofer.NET.csproj" />
