--- a/Gofer.NET.Utils/Gofer.NET.Utils.csproj
+++ b/Gofer.NET.Utils/Gofer.NET.Utils.csproj
@@ -3,7 +3,14 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Version>1.0.0-beta-$(VersionSuffix)</Version>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'ConsoleTestServer|AnyCPU'" />
+
+  <PropertyGroup>
+    <Title>Gofer.NET Utilities</Title>
+    <Description>Easy C# API for Distributed Background Tasks/Jobs for .NET Core. Utilities package.</Description>
+    <PackageTags>Distributed;Queue;Scheduled;Crontab;Cron;AspNet;MVC;Background;Redis</PackageTags>
+    <RepositoryUrl>https://github.com/brthor/Gofer.NET</RepositoryUrl>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
