--- a/Gofer.NET.csproj
+++ b/Gofer.NET.csproj
@@ -3,14 +3,24 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Version>1.0.0-beta-$(VersionSuffix)</Version>
   </PropertyGroup>
+
+  <PropertyGroup>
+    <Title>Gofer.NET</Title>
+    <Description>Easy C# API for Distributed Background Tasks/Jobs for .NET Core.</Description>
+    <PackageTags>Distributed;Queue;Scheduled;Crontab;Cron;AspNet;MVC;Background;Redis</PackageTags>
+    <RepositoryUrl>https://github.com/brthor/Gofer.NET</RepositoryUrl>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="NCrontab" Version="3.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="StackExchange.Redis" Version="2.0.600" />
   </ItemGroup>
+  
   <ItemGroup>
     <ProjectReference Include="Gofer.NET.Utils\Gofer.NET.Utils.csproj" />
   </ItemGroup>
+
   <ItemGroup>
     <EmbeddedResource Remove="Gofer.NET.Utils\**" />
     <EmbeddedResource Remove="Gofer.NET.Tests\**" />
