--- a/Gofer.NET.csproj
+++ b/Gofer.NET.csproj
@@ -14,7 +14,7 @@
   <ItemGroup>
     <PackageReference Include="NCrontab" Version="3.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    <PackageReference Include="StackExchange.Redis" Version="2.0.600" />
+    <PackageReference Include="StackExchange.Redis.StrongName" Version="1.2.6" />
   </ItemGroup>
   
   <ItemGroup>
